<resources>
    <string name="app_name">PeluqueriaCanina</string>
    <string name="bienvenida">Bienvenido!</string>
    <string name="bienvenida2">Inicia sesion para empezar</string>
    <string name="login">Inicia Sesión</string>
    <string name="et_correo">Introduce tu correo</string>
    <string name="et_contrasenia">Introduce tu contraseña</string>
    <string name="check_recordar">Recuerdame</string>
    <string name="btn_registro">registrate!</string>
    <string name="tv_categoria">Categorias</string>
    <string name="btn_login">Iniciar Sesion</string>
    <string name="tv_registro">Si aun no formas parte de la familia</string>
    <string name="tv_tam_citas">No hay ninguna cita</string>
    <string name="registro">Nos alegra mucho que quieras formar parte de nuestra familia!</string>
    <string name="registro2">Empecemos con el registro</string>
    <string name="et_nombre">Introduce tu nombre</string>
    <string name="et_apellido">Introduce tus apellidos</string>
    <string name="et_usuario">Introduce tu usuario</string>
    <string name="btn_registro_siguiente">Siguiente</string>
    <string name="btn_registro_atras">Atras</string>
    <string name="tv_peluqueria_menu">Peluqueria</string>
    <string name="tv_veterinaria_menu">Veterinaria</string>
    <string name="tv_tienda_menu">Tienda</string>
    <string name="tv_noticias_menu">Noticias</string>
    <string name="tv_opciones_menu">Opciones</string>
    <string name="tv_cerrar_sesion_menu">Cerrar sesion</string>
    <string name="tv_registro_dos">Solo un poco mas!!!\n</string>
    <string name="et_conf_contrasenia">Confirmar Contraseña</string>
    <string name="btn_registro_verificar">Verificar</string>
    <string name="et_ConfirmarCorreo">Confirma tu correo</string>
    <string name="tv_registro_cinco">Te hemos mandado un sms de confirmacion!!!</string>
    <string name="tv_mandar_sms_otra_vez">No lo has recibido?</string>
    <string name="btn_volver_enviar">mandar otra vez</string>
    <string name="tv_telefono">Introduce tu telefono</string>
    <string name="tv_registro_cuatro">ya casi estamos!!!</string>
    <string name="hint_et_telefono_reg_cua">Introduce tu telefono</string>
    <string name="tv_registro_tres">Ya casi has acabado!!!\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">Debes introducir datos para iniciar sesion</string>
    <string name="msj_no_accede">Has introducido algun dato incorrecto</string>
    <string name="tst_fill">Rellena todos los campos</string>
    <string name="mas_btn">+</string>
    <string name="enhorabuena">Gracias por registrarte con nosotros!!!</string>
    <string name="btn_registro_final">Finalizar</string>
    <string name="et_nombre_animal">Introduce su nombre</string>
    <string name="tv_registro_animal">Que bien vas a guardar a una mascota!!!</string>
    <string name="iv_texto_registrar_animal">Pulsa para poner una foto de tu mascota</string>
    <string name="btn_registro_animal">Registrar</string>
    <string name="et_raza_animal">Introduce la raza</string>
    <string name="error_permisos">Se necesitan permisos para poder sacar una foto</string>
    <string name="error_registrar_animal_vacio">Se necesita todos los campos para poder continuar</string>
    <string name="tv_datos_animal">Datos sobre tu animal</string>
    <string name="tv_datos_nom_animal">Nombre: %1$s</string>
    <string name="tv_datos_raza_animal">Raza: %1$s</string>
    <string name="btn_datos_animal_borrar">Borrar</string>
    <string name="title_activity_ubicacion_tiempo_real">UbicacionTiempoRealActivity</string>
    <string name="error_verificar_codigo">Ha habido un problema verificando el codigo por favor mandalo otra vez</string>
    <string name="tv_texto_titulo_selecciona_animal">Selecciona con que mascota quieres hacer la reserva!!!</string>
    <string name="error_no_hay_animales">Debes guardar a tu primer animal para poder reservar cita</string>
    <string name="tv_ver_tus_citas">Ver tus citas</string>
    <string name="btn_cancelar_cita">Cancelar cita</string>
    <string name="tv_no_hay_citas">No tienes ninguna cita</string>
    <string name="correo_inco">Los correos deben coincidir</string>
    <string name="correo_coincide">Los correos deben de coincidir</string>
    <string name="contra_coincide">Las contraseñas deben de coincidir</string>
    <string name="tv_chat_peluqueria_menu">Chat</string>

    <string name="nosepuedo">No se pudo crear el usuario</string>
    <string name="et_direccion">Introduce tu direccion</string>
    <string name="kilo">1 Kg</string>
    <string name="pienso_perro">Pienso para perros</string>
    <string name="test">test</string>
    <string name="hint_buscar">Buscar...</string>
    <string name="piensos">piensos</string>
    <string name="precio_final_1">25€</string>
    <string name="precio_2">30€</string>
    <string name="precio">%1$s€</string>
    <string name="tienda_online">Tienda Online</string>
    <string name="tienda_categoria">Categorias</string>
    <string name="producto_popular">Productos Populares</string>
    <string name="detalle_producto">Detalle Producto</string>
    <string name="add_cesta">AÑADIR A LA CESTA</string>
    <string name="tst_correo_exist">Este correo ya existe</string>
    <string name="tv_datos_cita">Ver detalles de la cita</string>
    <string name="tv_furgoneta_camino">La furgoneta esta en camino!!!</string>
    <string name="tv_tiempo_estimado_horas">Esta a:  %,.2f H</string>
    <string name="tv_tiempo_estimado_minutos">Tiempo estimado: %,.0f minutos</string>
    <string name="et_chat">Escribe un mensaje</string>
    <string name="btn_chat_enviar">Enviar</string>
    <string name="error_no_hay_citas">Si no reservas una cita no puedes hablar con el conductor</string>
    <string name="tv_perfil_menu">Ver perfil</string>
    <string name="tv_alimentacion_tienda">Alimentación</string>
    <string name="tv_accesorios_tienda">Accesorios</string>
    <string name="tv_juguetes_tienda">Juguetes</string>
    <string name="conductor_a_punto_llegar">El conductor debe de estar a punto de llegar</string>
    <string name="fecha_distinta_hoy">Solo se puede mirar las fechas de las citas de hoy</string>
    <string name="contrasenia_vacia">Introduzca una contraseña</string>
    <string name="longitud_contra">La contraseña tiene que tener al menos 8 caracteres</string>
    <string name="direccion_vacia">Debes introducir una direccion</string>
    <string name="nom_vet">Veterinaria: %1$s</string>
    <string name="dia_vet">Dia: %1$s</string>
    <string name="hora_vet">Hora: %1$s</string>
    <string name="tv_veterinaria_ver_citas_menu">Recordatorios</string>
    <string name="tv_mensaje_no_llega_aun_tiempo">Cuando queden 30 minutos se mostrara a la furgoneta en el mapa</string>
    <string name="nom_animal_pel">Nombre animal: %1$s</string>
    <string name="dia_anima_pel">Dia: %1$s</string>
    <string name="hora_animal_vet">Hora: %1$s</string>
    <string name="tv_mostrar_info">La furgoneta llegara sobre las: %1$s</string>
    <string name="btn_google">Llevame ahi!!</string>
    <string name="nom_compra_carrito">Nombre: %1$s</string>
    <string name="cantidad_compra_carrito">Cantidad: %1$s</string>
    <string name="precio_compra_carrito">Precio: %1$s</string>
    <string name="btn_pagar">Pagar</string>
    <string name="precio_total">TOTAL = %1$s</string>
    <string name="contra_minuscula">Tienes que introducir una mayuscula</string>
    <string name="simbolo_contra">Debes introducir un numero como minimo</string>
    <string name="tv_acercade_ajustes">Acerca DE</string>
    <string name="tv_cambiar_contra">Cambiar contraseña</string>
    <string name="tv_cerrar_sesion">Cerrar Sesion</string>
    <string name="tv_cambiar_usuario">Cambiar nombre de usuario</string>
    <string name="tv_acerca_de">Acerca de</string>
    <string name="msj_correo_enviado">Se te ha enviado un correo para cambiar la contraseña</string>
    <string name="msj_correço_enviado">Se te ha enviado un correo electronico para cambiar tu contraseña</string>
    <string name="tst_email_exist">No existe el correo</string>
    <string name="tv_preguntas_y_respuestas">Q &amp; A</string>
    <string name="itulo">The Rolling Dogs</string>
    <string name="Text2">\n\nVersión \n1.0</string>
    <string name="Text3">\nThe Rolling Dogs y los logotipos de The Rolling Dogs son marcas comerciales de TheRollingDogs S.L Todos los derechos reservados. \n\nThe Rolling Dogs para Android se ha creado con software de código abierto: licencias. \n\nCreadores: \Fernando Pasquín Cantos\nRodrigo Garvía Gamboa\nSamuel Romero Fuertes</string>
    <string name="tv_no_hay_recordatorios">No tienes ningun recordatorio</string>
    <string name="carrito_vacio">Para ver tu cesta antes debes añadir algo</string>
    <string name="tv_borrarCantidad">En cuantos lo quieres dejar?</string>
    <string name="btn_cancelar">Aceptar cambios</string>
    <string name="buy_with_googlepay_button_content_description">Buy with Google Pay</string>
    <string name="googlepay_status_unavailable">Google pay no esta disponible en este dispositivo</string>
    <string name="payments_show_name">Successfully received payment data for %s!</string>
    <string name="tv_mensaje_recordatorio">Selecciona con que mascota quieres hacer el recordatorio</string>
    <string name="cancelar_recordatorio">cancelar recordatorio</string>
    <string name="tv_nombre_vet">Veterinaria: %1$s</string>
    <string name="tv_fecha_vet">Fecha: %1$s</string>
    <string name="tv_hora_vet">A las: %1$s</string>
</resources>