<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/color_principal_citas">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itulo"
        android:layout_marginTop="50dp"

        android:textAlignment="center"
        android:textSize="36sp"
        tools:ignore="InvalidId" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo"
        android:layout_marginTop="5dp"
        android:text="@string/Text2"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv2"
        android:layout_marginTop="30dp"
        android:text="@string/Text3"
        android:textAlignment="center"
        android:textSize="16sp" />



</RelativeLayout>