<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_principal"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:text="@string/bienvenida"
                android:textColor="@color/color_texto_blanco"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenida2"
                android:textColor="@color/color_texto_blanco"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="3"
        android:background="@drawable/fondo_cartas">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="@color/color_gris"
            android:textSize="36dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:inputType="textEmailAddress"
                app:hintTextColor="@color/color_gris"
                android:textColorHint="@color/color_gris">

            <EditText
                android:id="@+id/et_correo"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/fondo_edit_text"
                android:drawableTint="@color/color_texto_negro"
                android:hint="@string/et_correo"

                android:paddingLeft="26dp"
                android:paddingRight="26dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:inputType="textPassword"
                app:hintTextColor="@color/color_gris"
                android:textColorHint="@color/color_gris"
                app:endIconMode="password_toggle">

                <EditText
                    android:id="@+id/et_contraseña"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"
                    android:background="@drawable/fondo_edit_text"
                    android:hint="@string/et_contrasenia"

                    android:inputType="textPassword"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp" />


            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="18dp"
                android:text="@string/check_recordar"
                android:textColor="@color/color_gris"
                android:textSize="18dp" />


            <android.widget.Button
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/fondo_btn"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textColor="@color/color_texto_blanco"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/tv_registro" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-13dp"
                    android:background="@android:color/transparent"
                    android:text="@string/btn_registro"
                    android:textAllCaps="false"
                    android:textColor="@color/color_principal" />


            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>


</LinearLayout>