<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/llCompra"
    android:orientation="vertical"
    android:layout_marginTop="10dp">

    <RelativeLayout
        android:id="@+id/rlContainerCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llSiguientePaginaCompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/fondo_btn_registrar"
        android:elevation="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llDatosCompra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNomCompra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom_compra_carrito"
                android:textColor="@color/color_blanco"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvCantidadCompra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad_compra_carrito"
                android:textColor="@color/color_blanco"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvPrecioCompra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio_compra_carrito"
                android:textColor="@color/color_blanco"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llSiguientePaginaCompra"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layoutAnimation="@anim/layout_animation_2" />
    </RelativeLayout>
</LinearLayout>