<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llCitasVet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlContainerVet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llSiguientePagina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/fondo_btn_registrar"
            android:elevation="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llDatosCita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNomVet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nom_vet"
                    android:textColor="@color/color_blanco"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvDiaVet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dia_vet"
                    android:textColor="@color/color_blanco"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvHoraVet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hora_vet"
                    android:textColor="@color/color_blanco"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvVerTusCitasSegundaPantallaVet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llSiguientePagina"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layoutAnimation="@anim/layout_animation_2" />
    </RelativeLayout>
</LinearLayout>