<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_principal_citas"
    tools:context=".Tienda2Activity">

    <ImageButton
        android:id="@+id/image_btn_flecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@null"
        android:foreground="?attr/selectableItemBackground"/>
    <TextView
        android:id="@+id/tv_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:layout_margin="6dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"/>
    <ImageButton
        android:id="@+id/image_comprar_tienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        android:background="@null"
        android:foreground="?attr/selectableItemBackground"/>
    <ScrollView
        android:id="@+id/scroll_tienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_btn_flecha">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_buscar_tienda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_buscar"
                app:startIconDrawable="@drawable/ic_baseline_search_24"
                android:layout_margin="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_buscar_tienda"
                    android:background="@drawable/fondo_edit_text"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:textColor="@color/color_gris"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_tienda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/amarillo">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/image_objeto_tienda"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_margin="6dp"
                        android:src=""/>
                    <TextView
                        android:id="@+id/tv_nombre_producto_tienda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/piensos"
                        android:layout_marginTop="6dp"
                        android:textColor="@color/black"
                        android:layout_toEndOf="@id/image_objeto_tienda"/>
                    <TextView
                        android:id="@+id/tv_pienso_producto_tienda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pienso_perro"
                        android:textColor="@color/black"
                        android:layout_toEndOf="@id/image_objeto_tienda"
                        android:layout_below="@+id/tv_nombre_producto_tienda"/>
                    <ImageButton
                        android:id="@+id/image_fav_producto_tienda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:src="@drawable/ic_baseline_favorite_border_24"
                        android:background="@null"
                        android:foreground="?attr/selectableItemBackground"
                        android:layout_alignParentEnd="true"/>
                    <TextView
                        android:id="@+id/tv_precio_final_producto_tienda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precio_final_1"
                        android:textColor="@color/black"
                        android:layout_toEndOf="@+id/image_objeto_tienda"
                        android:layout_below="@+id/tv_pienso_producto_tienda"/>
                    <TextView
                        android:id="@+id/tv_precio_prodcuto_tienda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precio_2"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/tv_precio_final_producto_tienda"
                        android:layout_below="@+id/tv_pienso_producto_tienda"/>
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_tienda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_add_24_white"
                        android:layout_below="@id/image_fav_producto_tienda"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="16dp"
                        app:backgroundTint="@color/color_principal_citas"
                        app:tint="@color/white"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>