<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_registro"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".registro.Registro5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/ivRegistro"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="140dp"
            android:background="@drawable/logo_peluqueria" />

        <TextView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivRegistro"
            android:layout_marginStart="50dp"
            android:layout_marginTop="-30dp"
            android:gravity="center"
            android:text="@string/tv_registro_cinco"
            android:textColor="@color/color_blanco_pero_no_tan_blanco"
            android:textSize="20sp"
            android:textStyle="italic" />

    </RelativeLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">



        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/estrella"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/enhorabuena"
                android:textSize="22sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/btnSiguienteRegCua"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/fondo_btn_registrar"
                android:text="@string/btn_registro_final"
                android:textAllCaps="false"
                android:textColor="@color/color_texto_blanco"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>





